[project]
name = "chaser-website"
description = "API for chaser website"
authors = [{name = "Florian ISAK"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.11.1",
    "asyncpg>=0.28.0",
    "fastapi[all]>=0.100.0",
    "pydantic>=2.0.3",
    "sqlalchemy>=2.0.19",
    "faker>=29.0.0"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["project"]